--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluentui_icons: ^1.0.0
   gap: ^1.0.0 
+  get: ^4.3.8
 
 dev_dependencies:
   flutter_test:
